# swegov-opendata-py

./: .gitignore  Makefile  README.md  mypy.ini  preprocess.py  pyproject.toml  ruff.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/swegov_opendata/: __init__.py
src/swegov_opendata/core/component/sparv/: config.py
src/swegov_opendata/lxml_extension/: __init__.py  cleaning.py  mutation.py
src/swegov_opendata/preprocess/: preprocess_html.py  preprocess_sfs.py  preprocess_xml.py
src/swegov_opendata/serialization/: __init__.py
swegov_opendata/: corpusinfo.py  preprocess.py
swegov_opendata/core/component/preprocess/: preprocess_corpura.py
swegov_opendata/core/component/preprocess/preprocess_sfs/: __init__.py  sfs_json.py  sparv_source.py
swegov_opendata/infrastructure/kernel/: telemetry.py
swegov_opendata/lxml_extension/: attribs.py  cleaning.py  printing.py
swegov_opendata/preprocess/: __init__.py  preprocess_html.py  preprocess_sfs.py  preprocess_xml.py
swegov_opendata/presentation/console/: main.py
swegov_opendata/presentation/console/commands/: sfs.py
tests/: conftest.py  etree_asserts.py
tests/assets/: cks6riksg.expected.xml  example1.expected.xml  sfs-1976-257.expected.xml
tests/integration/: build_sfs_source_integration_test.py  preprocess_sfs_json_integration_test.py  preprocess_xml_integration_test.py
tests/unit/: cleaning_unit_test.py  sfs_json_unit_test.py
