[tool.poetry]
name = "swegov-opendata"
version = "0.1.0"
description = ""
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
license = "MIT"
readme = "README.md"
packages = [{include = "swegov_opendata"}]

[tool.poetry.scripts]
rd-preprocess = "swegov_opendata.presentation.console.main:app"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.3"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-cov = "^4"
watchfiles = "^0.20.0"
black = "^23.9.1"
mypy = "^1.5.1"
types-lxml = "^2023.3.28"


[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
