[project]
name = "swegov-opendata"
version = "0.1.0"
description = "Preprocessing of Swedish riksdagens öppna data (open data)"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
dependencies = ["lxml>=4.9.3", "typer>=0.9.0", "beautifulsoup4>=4.12.2"]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.optional-dependencies]
ci = ["ruff>=0.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "watchfiles>=0.21.0",
    "black>=23.10.1",
    "mypy>=1.6.1",
    "types-lxml>=2023.10.21",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
"lint:ruff" = "ruff check src tests"
